testdata/baselines/reference/submodule/conformance/nodeModulesPackagePatternExports(module=nodenext).errors.txt
node_modules/inner/index.d.cts(3,13): error TS2303: Circular definition of import alias 'mjs'.
node_modules/inner/index.d.cts(6,10): error TS2303: Circular definition of import alias 'mjs'.
node_modules/inner/index.d.mts(4,13): error TS2303: Circular definition of import alias 'type'.
node_modules/inner/index.d.mts(7,10): error TS2303: Circular definition of import alias 'type'.
node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.
node_modules/inner/index.d.ts(5,10): error TS2303: Circular definition of import alias 'cjs'.


==== index.ts (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== index.mts (0 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== index.cts (0 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/index";
    import * as mjsi from "inner/mjs/index";
    import * as typei from "inner/js/index";
    cjsi;
    mjsi;
    typei;
==== node_modules/inner/index.d.ts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
             ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    export { mjs };
    export { type };
==== node_modules/inner/index.d.mts (2 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
                ~~~~
!!! error TS2303: Circular definition of import alias 'type'.
    export { cjs };
    export { mjs };
    export { type };
             ~~~~
!!! error TS2303: Circular definition of import alias 'type'.
==== node_modules/inner/index.d.cts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'mjs'.
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
             ~~~
!!! error TS2303: Circular definition of import alias 'mjs'.
    export { type };
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*": "./*.cjs",
            "./mjs/*": "./*.mjs",
            "./js/*": "./*.js"
        }
    }
    